KAAV-1047 Fixes to styles, prevent input fields from stretching (#467)

--- a/src/components/projectEdit/ProjectEdit.scss
+++ b/src/components/projectEdit/ProjectEdit.scss
@@ -29,7 +29,6 @@
   background-color: white;
   padding: 0;
   position: initial !important;
-  padding-right: $size16;
   padding-left: $size16;
 
   #field-segment {
@@ -66,16 +65,19 @@
   }
 }
 
-@media screen and (max-width: 600px){
-  .form-container{
-      padding-top: 120px !important;
-  }
+.project-page-container {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
 }
 
 .project-input-container {
   display: flex;
+  flex-direction: row;
   align-items: flex-start;
-  margin: 0px auto 40px auto;
+  justify-content: space-between;
+  margin-bottom: 40px;
+  max-width: 100%;
 
   @media screen and (max-width: 695px) {
     margin: 0 0 40px 0;
@@ -112,7 +114,7 @@
   flex-direction: column;
   flex: 1;
   padding-right: 8px;
-  min-width: 30%;
+  min-width: 360px;
   max-width: 368px;
   z-index: 90;
   position: sticky;
@@ -129,14 +131,21 @@
 }
 
 .project-input-right {
+  display: flex;
+  flex-direction: column;
   flex: 1;
+
+  min-width: 50%;
+  max-width: 100%;
+
+  padding: 1.25rem 0 0 1.25rem;
+
+  margin-left: 1rem;
 
   .sticky-title {
     position: sticky;
     top: 150px;
     background-color: $white-background;
-    padding: $size16;
-    margin-left: $size16;
     z-index: 90;
 
     .section-title {
@@ -158,6 +167,11 @@
       border-bottom: 2px solid $black1;
       min-height: 35px;
     }
+  }
+
+  #field-segment {
+    position: initial;
+    padding: 0;
   }
 }
 
